[package]
name = "fast_ipod_dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
id3 = "1.7"
mp4ameta = "0.11"
anyhow = "1.0"
sanitize-filename = "0.6.0"
indicatif = "0.17"
clap = { version = "4.3", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
